# invenio-subjects-mesh

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  babel.ini  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py  tasks.py
.github/workflows/: assess-prerelease-compatibility.yml  publish-to-pypi.yml  pypi-publish.yml  run-tests.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_subjects_mesh/: __init__.py  cli.py  converter.py  downloader.py  reader.py  version.py  writer.py
invenio_subjects_mesh/download/: __init__.py  download.py
invenio_subjects_mesh/vocabularies/: __init__.py  subjects_mesh.yaml  vocabularies.yaml
tests/: conftest.py  test_invenio_subjects_mesh.py  test_main.py
