# -*- coding: utf-8 -*-
#
# Copyright (C) 2021 Northwestern University.
#
# invenio-subjects-mesh is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py

[compile_catalog]
directory = invenio_subjects_mesh/translations/

[extract_messages]
copyright_holder = Northwestern University
msgid_bugs_address = guillaume.viger@northwestern.edu
mapping-file = babel.ini
output-file = invenio_subjects_mesh/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_subjects_mesh/translations/messages.pot
output-dir = invenio_subjects_mesh/translations/

[update_catalog]
input-file = invenio_subjects_mesh/translations/messages.pot
output-dir = invenio_subjects_mesh/translations/

# [options.entry_points]
# console_scripts =
#     invenio-subjects-mesh = invenio_subjects_mesh.cli:main

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
