# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2022 Northwestern University.
#
# invenio-subjects-mesh is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
version = attr: invenio_subjects_mesh.__version__

[options.entry_points]
console_scripts =
    invenio-subjects-mesh = invenio_subjects_mesh.cli:main
invenio_rdm_records.fixtures =
    invenio_subjects_mesh = invenio_subjects_mesh.vocabularies

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_subjects_mesh --cov-report=term-missing
testpaths = tests invenio_subjects_mesh

[pydocstyle]
add_ignore = D401
